ammend homepage image, ammend base and idex and core css to suit

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -28,13 +28,13 @@ body {
 }
 
 .shop-now-button {
-    background: black;
+    background: red;
     color: white;
     min-width: 260px;
 }
 
 .btn-black {
-    background: black;
+    background: red;
     color: white;
 }
 
@@ -44,16 +44,16 @@ body {
 .btn-black:hover,
 .btn-black:active,
 .btn-black:focus {
-    background: #222;
+    background:red;
     color: white;
 }
 
 .text-black {
-    color: #000 !important;
+    color: red !important;
 }
 
 .border-black {
-    border: 1px solid black !important;
+    border: 1px solid red !important;
 }
 
 /* -------------------------------- Media Queries */
