add css to change dropdown link colour

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -27,6 +27,10 @@ body {
     width: fit-content;
 }
 
+.dropdown-item {
+    color: red;
+}
+
 .shop-now-button {
     background: red;
     color: white;
