--- a/static/css/base.css
+++ b/static/css/base.css
@@ -60,6 +60,10 @@ body {
     border: 1px solid red !important;
 }
 
+.bg-black {
+    background: red !important;
+}
+
 /* -------------------------------- Media Queries */
 
 /* Slightly larger container on xl screens */
