--- a/static/css/base.css
+++ b/static/css/base.css
@@ -10,6 +10,7 @@ body {
     font-family: 'Lato';
 }
 
+
 /* from Bulma */
 .icon {
     align-items: center;
@@ -21,6 +22,7 @@ body {
 
 .logo-font {
     text-transform: uppercase;
+    color: red;
 }
 
 .main-logo-link {
