--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,5 +1,10 @@
 <div class="collapse navbar-collapse" id="main-nav">
     <ul class="navbar-nav w-auto mx-auto">
+        <li class="nav-item d-block d-md-none">
+            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="{% url 'home' %}" id="home-link">
+                Home
+            </a>
+        </li>
         <li class="nav-item dropdown">
             <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="all-products-link"
                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -9,33 +14,33 @@
                 <a href="" class="dropdown-item">By Price</a>
                 <a href="" class="dropdown-item ">By Rating</a>
                 <a href="" class="dropdown-item ">By Category</a>
-                <a href="{% url 'products' %}" class="dropdown-item">All Products</a>
+                <a href="" class="dropdown-item">All Products</a>
             </div>
         </li>
 
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="clothing-link"
+            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="gifts-for-him-link"
                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Gifts for him
             </a>
-            <div class="dropdown-menu border-0" aria-labelledby="clothing-link">
-                <a href="" class="dropdown-item">Electrical</a>
-                <a href="" class="dropdown-item">Outdoor</a>
-                <a href="" class="dropdown-item">Clothing</a>
-                <a href="" class="dropdown-item">Others</a>
+            <div class="dropdown-menu border-0" aria-labelledby="gifts-for-him-link">
+                <a href="{% url 'products' %}?Category=Electrical" class="dropdown-item">Electrical</a>
+                <a href="{% url 'products' %}?Category=Outdoor" class="dropdown-item">Outdoor</a>
+                <a href="{% url 'products' %}?Category=Clothing" class="dropdown-item">Clothing</a>
+                <a href="{% url 'products' %}?Category=Others" class="dropdown-item">Others</a>
             </div>
         </li>
 
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="homeware-link"
+            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="gifts-for-her-link"
                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Gifts for her
             </a>
-            <div class="dropdown-menu border-0" aria-labelledby="homeware-link">
-                <a href="" class="dropdown-item">Electrical</a>
-                <a href="" class="dropdown-item">Outdoor</a>
-                <a href="" class="dropdown-item">Clothing</a>
-                <a href="" class="dropdown-item">Others</a>
+            <div class="dropdown-menu border-0" aria-labelledby="gifts-for-her-link">
+                <a href="{% url 'products' %}?Category=Electrical" class="dropdown-item">Electrical</a>
+                <a href="{% url 'products' %}?Category=Outdoor" class="dropdown-item">Outdoor</a>
+                <a href="{% url 'products' %}?Category=Clothing" class="dropdown-item">Clothing</a>
+                <a href="{% url 'products' %}?Category=Others" class="dropdown-item">Others</a>
             </div>
         </li>
 
@@ -45,10 +50,11 @@
                 Special Offers
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="specials-link">
-                <a href="" class="dropdown-item">New Arrivals</a>
-                <a href="" class="dropdown-item">Deals</a>
-                <a href="" class="dropdown-item">Clearance</a>
-                <a href="" class="dropdown-item">All Specials</a>
+                <a href="{% url 'products' %}?category=whats_new" class="dropdown-item">What's new</a>
+                <a href="{% url 'products' %}?category=deals" class="dropdown-item">Deals</a>
+                <a href="{% url 'products' %}?category=clearance" class="dropdown-item">Clearance</a>
+                <a href="{% url 'products' %}?category=new_arrivals,deals,clearance" class="dropdown-item">All
+                    Specials</a>
             </div>
         </li>
     </ul>
