add sorting and product count to product page

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -76,6 +76,12 @@ body {
     z-index: -1;
 }
 
+a.category-badge > span.badge:hover {
+    background: red !important;
+    color: #fff !important;
+
+}
+
 
 /* -------------------------------- Media Queries */
 
