--- a/static/css/base.css
+++ b/static/css/base.css
@@ -82,6 +82,18 @@ a.category-badge > span.badge:hover {
 
 }
 
+.btt-button {
+    height:40px;
+    position:fixed;
+    width: 40px;
+    bottom: 10px;
+    right: 10px;
+}
+
+.btt-link {
+    cursor: pointer;
+}
+
 
 /* -------------------------------- Media Queries */
 
