--- a/static/css/base.css
+++ b/static/css/base.css
@@ -102,6 +102,24 @@ a.category-badge > span.badge:hover {
     cursor: pointer;
 }
 
+/* -------------------------------- toasts */
+
+.message-container {
+    position: fixed;
+    top: 72px;
+    right: 15px;
+    z-index: 99999999;
+}
+
+.custom-toast {
+    overflow: visable;
+
+}
+
+.toast-capper {
+    height: 2px;
+}
+
 
 
 /* -------------------------------- Media Queries */
