add checkout functionality and confirm data on stripe

--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -32,6 +32,6 @@
 
 #payment-form .form-control,
 #card-element {
-    color:red;
-    border: 1px solid red;
+    color:black;
+    border: 1px solid black;
 }
