add checkout success logic and test with stripe, ammend form to include postcode ommitted in error

--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -3,13 +3,17 @@
 {% load bag_tools %}
 
 {% block extra_css %}
-<link rel="stylesheet" href="{% static 'checkout/css/checkout.css' %}" {% endblock %} {% block page_header %} <div
-    class="container header-container">
-<div class="row">
-    <div class="col"></div>
-</div>
-</div>
+<link rel="stylesheet" href="{% static 'checkout/css/checkout.css' %}">
+ {% endblock %} 
+ 
+ {% block page_header %}
+ <div class="container header-container">
+     <div class="row">
+         <div class="col"></div>
+     </div>
+ </div>
 {% endblock %}
+
 
 {% block content %}
 <div class="overlay"></div>
@@ -82,6 +86,7 @@
                         <legend class="fieldset-label small text-red px2 w-auto">Delivery</legend>
                         {{ order_form.phone_number | as_crispy_field }}
                         {{ order_form.country | as_crispy_field }}
+                        {{ order_form.postcode | as_crispy_field }}
                         {{ order_form.town_or_city | as_crispy_field }}
                         {{ order_form.street_address1 | as_crispy_field }}
                         {{ order_form.street_address2 | as_crispy_field }}
@@ -137,6 +142,6 @@
     {% block postloadjs %}
         {{ block.super }}
         {{ stripe_public_key|json_script:"id_stripe_public_key" }}
-        {{ stripe_public_key|json_script:"id_client_secret" }}
+        {{ client_secret|json_script:"id_client_secret" }}
          <script src="{% static 'checkout/js/stripe_elements.js' %}"></script>
     {% endblock %}
