--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -23,6 +23,16 @@
     </div>
 
     <div class="row">
+        <div class="col-12 col-md-6">
+            <form method="POST" ection="{% url 'add_product' %}" class="form mb-2" enctype="multiport/form-data">
+                {% csrf_token %}
+                {{ form | crispy}}
+                <div class="text-right">
+                    <a class="btn btn-outline-red rounded-0" href="{% url 'products' %}">Cancel</a>
+                    <button class="btn btn-red rounded-0" type="submit">Add Product</button>
+                </div>
+        </form>
+        </div>
     </div>
 </div>
 {% endblock %}
