finish add product logic, add if statements to templates for images where needed

--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -17,21 +17,20 @@
         <div class="col-12 col-md-6">
             <hr>
             <h2 class="logo-font mb-4">Product Management</h2>
-            <h5 class="text_muted">Add a Product</h5>
+            <h5 class="text-muted">Add a Product</h5>
             <hr>
         </div>
     </div>
-
     <div class="row">
         <div class="col-12 col-md-6">
-            <form method="POST" ection="{% url 'add_product' %}" class="form mb-2" enctype="multiport/form-data">
+            <form method="POST" action="{% url 'add_product' %}" class="form mb-2" enctype="multipart/form-data">
                 {% csrf_token %}
-                {{ form | crispy}}
+                {{ form | crispy }}
                 <div class="text-right">
                     <a class="btn btn-outline-red rounded-0" href="{% url 'products' %}">Cancel</a>
                     <button class="btn btn-red rounded-0" type="submit">Add Product</button>
                 </div>
-        </form>
+            </form>
         </div>
     </div>
 </div>
