--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -12,7 +12,7 @@
                 <input class="form-control border border-black rounded-0" type="text" name="q"
                     placeholder="Search our site">
                 <div class="input-group-append">
-                    <button class="form-control form-control btn btn-red border border-black rounded-0" type="submit">
+                    <button class="form-control form-control btn btn-red border border-red rounded-0" type="submit">
                         <span class="icon">
                             <i class="fas fa-search"></i>
                         </span>
@@ -33,7 +33,7 @@
     <div class="dropdown-menu border-0" aria-labelledby="user-options">
         {% if request.user.is_authenticated %}
         {% if request.user.is_superuser %}
-        <a href="{% url 'account_logout' %}" class="dropdown-item">Product Management</a>
+        <a href="{% url 'add_product' %}" class="dropdown-item">Product Management</a>
         {% endif %}
         <a href="" class="dropdown-item">My Profile</a>
         <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
