further style add/edit product fields, add if ststements to templates to ensure crispy element renders when needed

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -46,7 +46,8 @@ body {
 
 .btn-outline-red {
     background: white;
-    color: red !important; /* Override link colours for <a> elements */
+    color: red !important;
+    /* Override link colours for <a> elements */
     border: 1px solid red;
 }
 
@@ -56,7 +57,7 @@ body {
 .btn-red:hover,
 .btn-red:active,
 .btn-red:focus {
-    background:red;
+    background: red;
     color: white;
 }
 
@@ -76,21 +77,21 @@ body {
     height: 100%;
     width: 100%;
     top: 0;
-    left:0;
+    left: 0;
     position: fixed;
     background: white;
     z-index: -1;
 }
 
-a.category-badge > span.badge:hover {
+a.category-badge>span.badge:hover {
     background: red !important;
     color: #fff !important;
 
 }
 
 .btt-button {
-    height:40px;
-    position:fixed;
+    height: 40px;
+    position: fixed;
     width: 40px;
     bottom: 10px;
     right: 10px;
@@ -126,10 +127,10 @@ input[name='q']::placeholder {
 
 /* from CSS-tricks.com: https://css-tricks.com/snippets/css/css-triangle/ */
 .arrow-up {
-    width: 0; 
-    height: 0; 
+    width: 0;
+    height: 0;
     border-left: 4px solid transparent;
-    border-right: 4px solid transparent; 
+    border-right: 4px solid transparent;
     border-bottom: 10px solid black;
     position: absolute;
     top: -10px;
@@ -182,37 +183,39 @@ input[name='q']::placeholder {
 /* Slightly larger container on xl screens */
 @media (min-width: 1200px) {
     .container {
-      max-width: 80%;
+        max-width: 80%;
     }
-  }
+}
 
-  /* Allauth form formatting*/
+/* Allauth form formatting*/
 
-  .allauth-form-inner-content {
-    margin-top: 1.5rem; /*mt-4*/
-    color: #6c757d; /* text-secondary*/
+.allauth-form-inner-content {
+    margin-top: 1.5rem;
+    /*mt-4*/
+    color: #6c757d;
+    /* text-secondary*/
 
-  }
+}
 
-  .allauth-form-inner-content input {
+.allauth-form-inner-content input {
     border-color: black;
     border-radius: 0;
 
-  }
+}
 
-  .allauth-form-inner-content input label:not([for='id_remember']) {
+.allauth-form-inner-content input label:not([for='id_remember']) {
     display: none;
 
-  }
+}
 
-  .allauth-form-inner-content input::placeholder {
+.allauth-form-inner-content input::placeholder {
     color: #aab7c4;
-  }
+}
 
-  .allauth-form-inner-content button,
+.allauth-form-inner-content button,
 .allauth-form-inner-content input[type='submit'] {
-	/* btn */
-	display: inline-block;
+    /* btn */
+    display: inline-block;
     font-weight: 400;
     color: #fff;
     text-align: center;
@@ -229,43 +232,72 @@ input[name='q']::placeholder {
     border-radius: 0;
 
     /* standard bootstrap btn transitions */
-    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
 }
 
 .allauth-form-inner-content button:hover,
-.allauth-form-inner-content input[type='submit']:hover {	
-	color: #fff;
-    background-color:  #17a2b8;
-    border-color:  #17a2b8;
+.allauth-form-inner-content input[type='submit']:hover {
+    color: #fff;
+    background-color: #17a2b8;
+    border-color: #17a2b8;
 }
 
 .allauth-form-inner-content a {
-	color: #17a2b8; /* text-info */
+    color: #17a2b8;
+    /* text-info */
 }
 
-  
-  /* fixed top navbar only on medium and up */
-  @media (min-width: 992px) {
-      .fixed-top-desktop-only {
-          position: fixed;
-          top: 0;
-          right: 0;
-          left: 0;
-          z-index: 1030;
-      }
-  
-      .header-container {
-          padding-top: 164px;
-      }
-  }
-  
-  /* pad the top a bit when navbar is collapsed on mobile */
-  @media (max-width: 991px) {
-      .header-container {
-          padding-top: 116px;
-      }
-  
-      body {
-          height: calc(100vh - 116px);
-      }
-  }
+/* Product Form */
+
+.btn-file {
+    position: relative;
+    overflow: hidden;
+}
+
+.btn-file input[type="file"] {
+    position: absolute;
+    top: 0;
+    right: 0;
+    min-width: 100%;
+    min-height: 100%;
+    opacity: 0;
+    cursor: pointer;
+}
+
+.custom-checkbox .custom-control-label::before {
+    border-radius: 0;
+    border-color: red;
+}
+
+.custom-checkbox .custom-control-input:checked~.custom-control-label::before {
+    background-color: red;
+    border-color: red;
+    border-radius: 0;
+}
+
+
+/* fixed top navbar only on medium and up */
+@media (min-width: 992px) {
+    .fixed-top-desktop-only {
+        position: fixed;
+        top: 0;
+        right: 0;
+        left: 0;
+        z-index: 1030;
+    }
+
+    .header-container {
+        padding-top: 164px;
+    }
+}
+
+/* pad the top a bit when navbar is collapsed on mobile */
+@media (max-width: 991px) {
+    .header-container {
+        padding-top: 116px;
+    }
+
+    body {
+        height: calc(100vh - 116px);
+    }
+}
