--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -49,6 +49,7 @@
                 </small>
                 {% endif %}
                 <p class="mt-3">{{ product.description }}</p>
+                <a href="{% url 'new_review' product.pk %}">See Reviews</a>
                 <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
                     {% csrf_token %}
                     <div class="form-row">
