--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -49,7 +49,20 @@
                 </small>
                 {% endif %}
                 <p class="mt-3">{{ product.description }}</p>
-                <a href="{% url 'new_review' product.pk %}">See Reviews</a>
+                <h4>Reviews</h4>
+                <div class="review-list">
+                {% if not product.products.all %}
+                    No reviews yet...<a href="#">Add one</a>
+                    {% else %}
+                        {% for review in product.products.all  %}
+                            {{ review.name }} - {{ review.date_added }}
+                            <br/>
+                            {{ review.body }}
+                            <br/>
+                            <br/>
+                        {% endfor %}
+                    {% endif %}
+                </div>
                 <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
                     {% csrf_token %}
                     <div class="form-row">
