--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -50,6 +50,8 @@
                 {% endif %}
                 <p class="mt-3">{{ product.description }}</p>
                 <h4>Reviews</h4>
+                <a href="{% url 'add_review' product.pk %}">Add Review</a>
+                <hr>
                 <div class="review-list">
                 {% if not product.products.all %}
                     No reviews yet...<a href="#">Add one</a>
