--- a/products/templates/products/add_review.html
+++ b/products/templates/products/add_review.html
@@ -19,7 +19,7 @@
     <div class="row">
         <div class="col">
             <hr>
-            <h2 class="logo-font mb-4">Add Review...</h2>
+            <h2 class="logo-font mb-4">Review Product</h2>
             <hr>
         </div>
     </div>
@@ -28,7 +28,7 @@
             <form class="mt-3" action="" method="POST" id="profile-update-form">
                 {% csrf_token %}
                 {{ form|crispy }}
-                <button class="btn btn-red rounded-0 text-uppercase float-right">Update Information</button>
+                <button class="btn btn-red rounded-0 float-right">Add Review</button>
             </form>
         </div>
         {% endblock %}
