--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -21,12 +21,12 @@
         <li class="nav-item dropdown">
             <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="gifts-for-him-link"
                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Gifts for him
+                Clothing
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="gifts-for-him-link">
-                <a href="{% url 'products' %}?Category=Electrical" class="dropdown-item">Electrical</a>
-                <a href="{% url 'products' %}?Category=Outdoor" class="dropdown-item">Outdoor</a>
-                <a href="{% url 'products' %}?Category=Clothing" class="dropdown-item">Clothing</a>
+                <a href="{% url 'products' %}?Category=Scarfs" class="dropdown-item">Scarfs</a>
+                <a href="{% url 'products' %}?Category=Shirts" class="dropdown-item">Shirts</a>
+                <a href="{% url 'products' %}?Category=Jeans" class="dropdown-item">Jeans</a>
                 <a href="{% url 'products' %}?Category=Others" class="dropdown-item">Others</a>
             </div>
         </li>
@@ -34,12 +34,12 @@
         <li class="nav-item dropdown">
             <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="gifts-for-her-link"
                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Gifts for her
+                Electrical
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="gifts-for-her-link">
-                <a href="{% url 'products' %}?Category=Electrical" class="dropdown-item">Electrical</a>
-                <a href="{% url 'products' %}?Category=Outdoor" class="dropdown-item">Outdoor</a>
-                <a href="{% url 'products' %}?Category=Clothing" class="dropdown-item">Clothing</a>
+                <a href="{% url 'products' %}?Category=Kitchen" class="dropdown-item">Electrical</a>
+                <a href="{% url 'products' %}?Category=Bedroom" class="dropdown-item">Outdoor</a>
+                <a href="{% url 'products' %}?Category=Living Room" class="dropdown-item">Clothing</a>
                 <a href="{% url 'products' %}?Category=Others" class="dropdown-item">Others</a>
             </div>
         </li>
