add further products, update category on navbar

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -40,7 +40,7 @@
                 <a href="{% url 'products' %}?Category=Portable Speakers" class="dropdown-item">Portable Speakers</a>
                 <a href="{% url 'products' %}?Category=Headphones" class="dropdown-item">Headphones</a>
                 <a href="{% url 'products' %}?Category=Kitchen" class="dropdown-item">Kitchen</a>
-                <a href="{% url 'products' %}?Category=Others" class="dropdown-item">Living</a>
+                <a href="{% url 'products' %}?Category=Living" class="dropdown-item">Living</a>
             </div>
         </li>
 
