create testing md document, add id to h2 in order to make text visable and add applicable to base.css

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -275,6 +275,9 @@ input[name='q']::placeholder {
     border-radius: 0;
 }
 
+#account-text {
+    color: grey !important;
+}
 
 /* fixed top navbar only on medium and up */
 @media (min-width: 992px) {
