add id to remaining allauth templates to rectify issue with h2 header not being visable

--- a/products/templates/products/add_review.html
+++ b/products/templates/products/add_review.html
@@ -19,7 +19,7 @@
     <div class="row">
         <div class="col">
             <hr>
-            <h2 class="logo-font mb-4">Review Product</h2>
+            <h2 class="logo-font mb-4" id="account-text">Review Product</h2>
             <hr>
         </div>
     </div>
