--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -84,7 +84,7 @@
                         <p class="mb-0 font-weight-bold">First Name</p>
                     </div>
                     <div class="col-12 col-md-8 text-md-right">
-                        <p class="mb-0">{{ order.first_name }}</p>
+                        <p class="mb-0">{{ order.full_name }}</p>
                     </div>
                 </div>
 
@@ -93,7 +93,7 @@
                         <p class="mb-0 font-weight-bold">Last Name</p>
                     </div>
                     <div class="col-12 col-md-8 text-md-right">
-                        <p class="mb-0">{{ order.last_name }}</p>
+                        <p class="mb-0">{{ order.full_name }}</p>
                     </div>
                 </div>
 
