--- a/static/css/base.css
+++ b/static/css/base.css
@@ -275,6 +275,19 @@ input[name='q']::placeholder {
     border-radius: 0;
 }
 
+/* Mail chimp*/
+#mc_embed_signup {
+    background: red;
+    clear: left;
+    font: 14px Helvetica, Arial, sans-serif;
+    width: 600px;
+}
+
+
+.mailchimp-text {
+    color: white;
+}
+
 #account-text {
     color: grey !important;
 }
