--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -33,7 +33,7 @@
                 method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
                 target="_blank" novalidate>
                 <div id="mc_embed_signup_scroll">
-                    <h2 class="mailchimp-text">Subscribe</h2>
+                    <h2 class="mailchimp-text">Subscribe to our newsletter for exclusive offers!</h2>
                     <div class="indicates-required mailchimp-text"><span class="asterisk">*</span> indicates required</div>
                     <div class="mc-field-group">
                         <label for="mce-EMAIL" class="mailchimp-text">Email Address <span class="asterisk">*</span>
