--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -4,6 +4,7 @@
             <a class="logo-font font-weight-bold nav-link text-black mr-5" href="{% url 'home' %}" id="home-link">
                 Home
             </a>
+       
         </li>
         <li class="nav-item dropdown">
             <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="all-products-link"
@@ -22,7 +23,7 @@
                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Clothing
             </a>
-            <div class="dropdown-menu border-0" aria-labelledby="gifts-for-him-link">
+            <div class="dropdown-menu border-0" aria-labelledby="#">
                 <a href="{% url 'products' %}?Category=Scarfs" class="dropdown-item">Scarfs</a>
                 <a href="{% url 'products' %}?Category=Shirts" class="dropdown-item">Shirts</a>
                 <a href="{% url 'products' %}?Category=Jeans" class="dropdown-item">Jeans</a>
@@ -42,4 +43,5 @@
                 <a href="{% url 'products' %}?Category=Living" class="dropdown-item">Living</a>
             </div>
         </li>
+    </ul>
 </div>
