--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -37,7 +37,7 @@
                 Electrical
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="gifts-for-her-link">
-                <a href="{% url 'products' %}?Category=Portable Speakers" class="dropdown-item">Portable Speakers</a>
+                <a href="{% url 'products' %}?Category=PortableSpeakers" class="dropdown-item">Portable Speakers</a>
                 <a href="{% url 'products' %}?Category=Headphones" class="dropdown-item">Headphones</a>
                 <a href="{% url 'products' %}?Category=Kitchen" class="dropdown-item">Kitchen</a>
                 <a href="{% url 'products' %}?Category=Living" class="dropdown-item">Living</a>
