correct further html validation issues

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -23,7 +23,7 @@
                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Clothing
             </a>
-            <div class="dropdown-menu border-0" aria-labelledby="#">
+            <div class="dropdown-menu border-0" aria-labelledby="clothing-products-link">
                 <a href="{% url 'products' %}?Category=Scarfs" class="dropdown-item">Scarfs</a>
                 <a href="{% url 'products' %}?Category=Shirts" class="dropdown-item">Shirts</a>
                 <a href="{% url 'products' %}?Category=Jeans" class="dropdown-item">Jeans</a>
@@ -36,7 +36,7 @@
                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Electrical
             </a>
-            <div class="dropdown-menu border-0" aria-labelledby="gifts-for-her-link">
+            <div class="dropdown-menu border-0" aria-labelledby="electrical-products-link">
                 <a href="{% url 'products' %}?Category=PortableSpeakers" class="dropdown-item">Portable Speakers</a>
                 <a href="{% url 'products' %}?Category=Headphones" class="dropdown-item">Headphones</a>
                 <a href="{% url 'products' %}?Category=Kitchen" class="dropdown-item">Kitchen</a>
