--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -23,7 +23,7 @@
                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Clothing
             </a>
-            <div class="dropdown-menu border-0" aria-labelledby="clothing-products-link">
+            <div class="dropdown-menu border-0" aria-labelledby="clothing-link">
                 <a href="{% url 'products' %}?Category=Scarfs" class="dropdown-item">Scarfs</a>
                 <a href="{% url 'products' %}?Category=Shirts" class="dropdown-item">Shirts</a>
                 <a href="{% url 'products' %}?Category=Jeans" class="dropdown-item">Jeans</a>
@@ -32,7 +32,7 @@
         </li>
 
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="gifts-for-her-link"
+            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="electrical-products-link"
                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Electrical
             </a>
