add robots.txt file, add provisional meta keywords and description

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta description="Gift giving has never been easier with gifts den find that perfect gift for that someone on your list." keywords="gifts for the family, gifts for all, great gifts to give, great gift ideas">
     {% endblock %}
 
     {% block extra_meta %}
