--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -37,6 +37,11 @@
                     </a>
                 </p>
                 {% endif %}
+                {% if product.rating %}
+                <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating }} / 5</small>
+                {% else %}
+                <small class="text-muted">No Rating</small>
+                {% endif %}
                 {% if request.user.is_superuser %}
                 <small class="ml-3">
                     <a href="{% url 'edit_product' product.id %}">Edit</a> |
@@ -44,22 +49,6 @@
                 </small>
                 {% endif %}
                 <p class="mt-3">{{ product.description }}</p>
-                <h4>Reviews</h4>
-                <a href="{% url 'add_review' product.pk %}">Add Review</a>
-                <hr>
-                <div class="review-list">
-                    {% if not product.products.all %}
-                    No reviews yet...<a href="{% url 'add_review' product.pk %}">Add one</a>
-                    {% else %}
-                    {% for review in product.products.all  %}
-                    {{ review.name }} - {{ review.date_added }}
-                    <br />
-                    {{ review.body }}
-                    <br />
-                    <br />
-                    {% endfor %}
-                    {% endif %}
-                </div>
                 <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
                     {% csrf_token %}
                     <div class="form-row">
@@ -79,20 +68,22 @@
                         <div class="col-12">
                             <p class="mt-3"><strong>Quantity:</strong></p>
                             <div class="form-group w-50">
-                                <div class="input-group">
+                                <div class="input-group input-group-{{ product.id }}">
                                     <div class="input-group-prepend">
-                                        <button class="decrement-qty btn btn-red rounded-0"
-                                            data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
+                                        <button
+                                            class="decrement-qty btn btn-red rounded-0 decrement-qty_{{ product.id }}"
+                                            data-item_id="{{ product.id }}">
                                             <span class="icon">
                                                 <i class="fas fa-minus"></i>
                                             </span>
                                         </button>
                                     </div>
-                                    <input class="form-control qty_input" type="number" name="quantity" value="1"
-                                        min="1" max="99" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
+                                    <input class="form-control qty_input id_qty_{{ product.id }}" type="number"
+                                        name="quantity" value="1" min="1" max="99" data-item_id="{{ product.id }}">
                                     <div class="input-group-append">
-                                        <button class="increment-qty btn btn-red rounded-0"
-                                            data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
+                                        <button
+                                            class="increment-qty btn btn-red rounded-0 increment-qty_{{ product.id }}"
+                                            data-item_id="{{ product.id }}">
                                             <span class="icon">
                                                 <i class="fas fa-plus"></i>
                                             </span>
@@ -102,7 +93,7 @@
                             </div>
                         </div>
 
-                        <div class="col-12">
+                        <div class="col{% if s %}-12 mt-2{% endif %}">
                             <a href="{% url 'products' %}" class="btn btn-outline-red rounded-0 mt-5">
                                 <span class="icon">
                                     <i class="fas fa-chevron-left"></i>
