add reviews div back in after bug fix

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -37,11 +37,6 @@
                     </a>
                 </p>
                 {% endif %}
-                {% if product.rating %}
-                <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating }} / 5</small>
-                {% else %}
-                <small class="text-muted">No Rating</small>
-                {% endif %}
                 {% if request.user.is_superuser %}
                 <small class="ml-3">
                     <a href="{% url 'edit_product' product.id %}">Edit</a> |
@@ -49,6 +44,23 @@
                 </small>
                 {% endif %}
                 <p class="mt-3">{{ product.description }}</p>
+
+                <h4>Reviews</h4>
+                <a href="{% url 'add_review' product.pk %}">Add Review</a>
+                <hr>
+                <div class="review-list">
+                    {% if not product.products.all %}
+                    No reviews yet...<a href="{% url 'add_review' product.pk %}">Add one</a>
+                    {% else %}
+                    {% for review in product.products.all  %}
+                    {{ review.name }} - {{ review.date_added }}
+                    <br />
+                    {{ review.body }}
+                    <br />
+                    <br />
+                    {% endfor %}
+                    {% endif %}
+                </div>
                 <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
                     {% csrf_token %}
                     <div class="form-row">
