--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -11,7 +11,7 @@
 
 {% block content %}
 <div class="overlay"></div>
-<div class="container-fluid">
+<div class="container-fluid" id="product-details-container">
     <div class="row">
         <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
             <div class="image-container my-5">
@@ -45,8 +45,13 @@
                 {% endif %}
                 <p class="mt-3">{{ product.description }}</p>
 
-                <h4>Reviews</h4>
+                <h4>Reviews</h4><h4>Tell us what you think!</h4>
                 <a href="{% url 'add_review' product.pk %}">Add Review</a>
+                <form action="{% url 'like_product' product.pk %}" method="POST">
+                    {% csrf_token %}
+                    <button type="submit" name="product_id" value="{{ product.id }}" class="btn btn-red">Like</button>
+
+                </form>
                 <hr>
                 <div class="review-list">
                     {% if not product.products.all %}
